examples/test/testpolicy18890.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18890
  namespace: namespace368
spec:
  podSelector:
    matchLabels:
      key7: value46
      key31: value46
      key21: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value41
      podSelector:
        matchLabels:
          key34: value44
          key29: value34
